# ClassezDesImagesAvecDesAlgorithmesDeDeeplearning

./: .gitignore  README.md  pyproject.toml
configs/: README.md  test.yml  test_big.yml
configs/classification/: experiment.yml
configs/classification/best/: levit_256.yml  levit_conv_256.yml  tf_efficientnetv2_b1.yml
configs/classification/ray/: test.yml
configs/detection/: experiment.yml  resnetfpn.yml  swin.yml  test.yml  test_big.yml  test_small.yml
configs/detection/fpn/: base.yml
configs/detection/ray/: README.md
configs/detection/vgg/: 32.yml  512_mosaic.yml  custom_16.yml
configs/fast-rcnn/: test_small.yml
configs/ray/: test.yml  vgg16.yml
configs/vgg/: 64.yml  test_small.yml
data/hugging_face/: .gitignore  README.md  main.py
notebooks/: experiments.ipynb  models.ipynb  zca.ipynb
src/data/: dataset.py
src/model/: label.py  model.py  train.py
src/model/models/: test.py
src/sdd/cli/: pred.py  sdd.py
src/sdd/compat/: __init__.py  format.py  utils.py
src/sdd/data/: augmentations.py  collator.py  dataset.py  mosaic.py  standard.py
src/sdd/data/maps/: basic.py
src/sdd/data/utils/: originals.py
src/sdd/metrics/: box.py  classification.py
src/sdd/model/: label.py  loss.py  model.py  run.py  stepper.py
src/sdd/model/heads/: box.py  classification.py  head.py  objectness.py
src/sdd/model/heads/pixel/: head.py  objectness.py  regression.py
src/sdd/model/losses/: __init__.py  fastrcnn.py
src/sdd/model/models/: __init__.py  rcnn.py  resnetfpn.py  test.py  vgg.py  yolov3.py
src/sdd/model/models/base/: fpn.py
src/sdd/model/models/tools/: __init__.py  ss.py
src/sdd/model/models/wrappers/: __init__.py  hf.py  timm.py
src/sdd/model/models/wrappers/torchvision/: faster_rcnn.py
src/sdd/optimizer/: __init__.py  lion.py
src/sdd/ray/: resolver.py
src/sdd/utils/: configs.py  dict.py  dir.py  lr.py
