[tool.poetry]
name = "oc5"
version = "0.1.0"
description = ""
authors = ["Alan Blanchet <alan@alan-blanchet.fr>"]
readme = "README.md"
repository = "https://github.com/AlanBlanchet/ClassezDesImagesAvecDesAlgorithmesDeDeeplearning"
packages = [{ include = "src/" }]


[tool.poetry.dependencies]
python = "~3.10"
torch = { url = "https://download.pytorch.org/whl/cu118/torch-2.0.1%2Bcu118-cp310-cp310-linux_x86_64.whl" }
torchvision = { url = "https://download.pytorch.org/whl/cu118/torchvision-0.15.2%2Bcu118-cp310-cp310-linux_x86_64.whl" }
transformers = { extras = ["torch"], version = "^4.31.0" }
datasets = "^2.14.1"
ipykernel = "^6.25.0"
mlflow = "^2.5.0"
pandas = "^2.1.0"
bs4 = "^0.0.1"
lxml = "^4.9.3"
tqdm = "^4.66.1"
wandb = "^0.15.10"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
