[tool.poetry]
name = "sdd"
version = "1.0.0"
description = "AI for predicting dog species from the Stanford Dogs Dataset"
authors = ["Alan Blanchet <alan@alan-blanchet.fr>"]
readme = "README.md"
repository = "https://github.com/AlanBlanchet/ClassezDesImagesAvecDesAlgorithmesDeDeeplearning"
packages = [{ include = "sdd", from = "src/" }]


[tool.poetry.dependencies]
python = "~3.10"
transformers = { extras = ["torch"], version = "^4.31.0" }
datasets = "^2.14.1"
ipykernel = "^6.25.0"
bs4 = "^0.0.1"
lxml = "^4.9.3"
tqdm = "^4.66.1"
wandb = "^0.15.10"
ray = "^2.6.3"
opencv-python = "^4.8.0.76"
seaborn = "^0.12.2"
torch = "^2.0.0"
torchvision = "^0.15.1"
scikit-learn = "^1.3.1"
torchmo = "^1.0.8"
einops = "^0.7.0"
pandas = "1.5.3"
torchmetrics = "^1.2.0"
inquirer = "^3.1.3"
timm = "^0.9.7"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"

[tool.poetry.scripts]
sdd = "sdd.cli.sdd:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
