[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["Alan Blanchet <alan@alan-blanchet.fr>"]
description = "AI for predicting dog species from the Stanford Dogs Dataset"
name = "sdd"
packages = [{include = "sdd", from = "src/"}]
readme = "README.md"
repository = "https://github.com/AlanBlanchet/ClassezDesImagesAvecDesAlgorithmesDeDeeplearning"
version = "1.0.0"

[tool.poetry.dependencies]
albumentations = "^1.3.1"
bs4 = "^0.0.1"
datasets = "^2.14.1"
einops = "^0.7.0"
inquirer = "^3.1.3"
ipykernel = "^6.25.0"
ipywidgets = "^8.1.1"
lxml = "^4.9.3"
opencv-python = "^4.8.1.78"
pandas = "1.5.3"
plotly = "^5.18.0"
pyarrow = "^14.0.1"
python = "~3.10"
ray = "^2.6.3"
scikit-learn = "^1.3.1"
seaborn = "^0.12.2"
timm = "^0.9.12"
torch = "^2.0.0"
torchmetrics = {extras = ["detection"], version = "^1.2.0"}
torchmo = "^1.0.8"
torchvision = "^0.15.1"
tqdm = "^4.66.1"
transformers = {extras = ["torch"], version = "^4.31.0"}
wandb = "^0.15.10"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"

[tool.poetry.scripts]
pred = "sdd.cli.pred:main"
sdd = "sdd.cli.sdd:main"
